# custom-kserve-tranformer

./: pyproject.toml
custom_kserve_tranformer/: model_transformer.py
